fixed payment alignment

--- a/pages/newcampaign/index.module.css
+++ b/pages/newcampaign/index.module.css
@@ -43,7 +43,7 @@
 }
 
 .NewCampaign_layout_staking { 
-    width: 450px;
+    width: 650px;
     height: 280px;
     border-radius:25px !important;
     padding-top:1%;
